<resources>
    <string name="app_name">Eyepax test</string>
    <string name="network_call_failed">Network call has failed : reason - </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="success">Success</string>
    <string name="error_please_try_again">Something went wrong. Please try again.</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_too_short">Password too short</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="running">Running</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
    <string name="breaking_news">Breaking News</string>
    <string name="see_all">See All</string>
    <string name="filter">Filter</string>
    <string name="reset">Rest</string>
    <string name="save">Save</string>
    <string name="languages">Languages</string>
    <string name="country">Country</string>
</resources>